[package]
name = "rbdt"
version = "0.0.2-alpha1"
edition = "2018"
readme = "Readme.md"
homepage = "https://github.com/pyo3/maturin"
repository = "https://github.com/pyo3/maturin"
license = "MIT"

[lib]
name = "rbdt"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
itertools = "0.9"
unicode-bom = "1"
deunicode = "1.1.1"
regex = "1"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]